# SMAC-PettingZoo

./: .gitignore  main.py  pyproject.toml
smac_pettingzoo/env/: smacv2.py
