[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smac_pettingzoo"
version = "1.0.0"
description = "SMAC-PettingZoo - Latest StarCraft Multi-Agent Challenge"
readme = "README.md"
license = { text = "MIT License" }
keywords = ["StarCraft", "PettingZoo", "Multi-Agent Reinforcement Learning"]
requires-python = ">=3.10"
dependencies = [
    "protobuf<3.21",
    "s2clientprotocol>=4.10.1.75800.0",
    "absl-py>=0.1.0",
    "numpy>=1.10",
    "pygame>=2.0.0",
    "pettingzoo>=1.24.3",
    "gymnasium",
    "pre-commit",
    "loguru",
    "pysc2 @ git+https://github.com/xihuai18/pysc2.git",
    "smac @ git+https://github.com/oxwhirl/smac.git",
    "smacv2 @ git+https://github.com/oxwhirl/smacv2.git",
    "co_mas @ git+https://github.com/xihuai18/Common-Multi-agent-Environments.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smac_pettingzoo"]

[project.urls]
Homepage = "https://github.com/your-repo/smac_pettingzoo"
Repository = "https://github.com/your-repo/smac_pettingzoo"
Issues = "https://github.com/your-repo/smac_pettingzoo/issues"
